Fix spacing on video

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ z-index: 2;
 {
 position:fixed;
 top:0;
-left:-100%;
+left:-70%;
 height:100%;
 width:70%;
 min-width: 1000px;
@@ -519,6 +519,7 @@ z-index: 5;
 background-color: white;
 display: table;
 }
+
 video {
 	outline: 0;
 	background-color: white;
@@ -526,16 +527,12 @@ video {
 }
 .fullscreen
 {
-width:100% !important;
-width: auto;
 height:100%;
 top:0;
 left:0;
 position:absolute;
 background-color:white;
 outline: 0;
-display: table-cell;
-text-align: center;
 }
 
 .story
@@ -603,7 +600,6 @@ padding-right: 20px;
 			font-family: "Muli", sans-serif;
 			position: relative;
 			top: -6px;
-			transition:all .5s;
 		}
 	
 	 #copylinkbox {
